2008-08-27  Raul Mateos  <raulofpandora@gmail.com>
	* godmode/menu.php, operation/menu.php: Updated to solve small ugly effects.
	
	* include/styles/op.css, god.css: Updated to solve small ugly effects. 
	god.css needs to be changed to the new "version".

2008-08-27  Raul Mateos  <raulofpandora@gmail.com>
	* install.php: Solved small typos in language. Style correction.

2008-08-25  Sancho lerena <slerena@artica.es>

	* extensions/update_manager: Added update manager client for
	PandoraFMS.

	* operation/reporting/custom_reporting.php: Moved PDF link.

	* operation/reporting/reporting_viewer_pdf.php: Moved to enterprise
	version.

	* godmode/agentes/agent_disk_conf_editor.php: Moved to enterprise
	version.

2008-08-25  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/agentes/modificar_agente.php: Updated delete routine to
	include a transaction. This way the database consistency is
	guaranteed in case a query causes a problem as follow up on Bugs 
	item #2073383. Also some style updates 

2008-08-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* include/languages/es.po: Updated Spanish translation.

	* include/languages/index.pot: Updated strings.

	* include/languages/es.mo: Updated Spanish translation.

	* godmode/reporting/graph_builder.php: Changed several hardcoded
	  striings to make them translatable.

2008-08-25  Esteban Sanchez  <estebans@artica.es>

	* images/help.png: Updated to a bigger image with more quality.

2008-08-24 Sancho Lerena  <slerena@gmail.com>

	* include/functions_db.php: Fixed some warning messages
	due missing check before several foreachs.
	
	* index.php: Disabled development flag to detect config.

	* operation/agentes/networkmap.php: String too short for
	names, long IP address was being shortened.

	* operation/servers/view_server.php,
	operation/servers/view_server_detail.php
	godmode/servers/manage_recontask_form.php: Fixed some warnings
	and added proper message for empty screens.
